# readout-experiments

./: .gitignore  README.md  cluster_utils.ipynb  data_generator.py  pyproject.toml  synthetic_experiments.ipynb  test.ipynb  utils.py
denoiser/: __init__.py  compound_loss.py  config.py  curriculum_stages.py  engine.py  inference.py  metrics.py  model.py  model_PRFD.py  model_v2.py  model_v3.py  model_v4.py  train.py  train_v2.py
regressor/: CUSUM.py  RCPD.py  SLS.py  datagen.py  engine.py  model.py  model2.py  shallow_models.py  test.ipynb  test2.ipynb
