[project]
name = "readout-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "cupy-cuda12x>=13.3.0",
  "cython>=3.0.11",
  "notebook>=7.3.1",
  "pykalman>=0.9.7",
  "pywavelets>=1.8.0",
  "qubit-measurement-analysis>=0.21.3",
  "scienceplots>=2.1.1",
  "setuptools>=75.6.0",
  "torch>=2.5.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "platform_system == 'Windows'" },
  { index = "pytorch-cu124", marker = "platform_system == 'Linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
